# recipe-api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: allrecipes-sample.json
docs/: solution-design-sample.excalidraw  solution-design-sample.md  solution-design-v1.excalidraw  solution-design.md  task.md
src/: cli.py  main.py
src/core/: __init__.py  containers.py  exception_handler.py  exceptions.py  redis_cache.py  settings.py
src/domains/: __init__.py  cooccurrence.py  duplicate.py  ingredient.py  ingredient_match.py  ingredient_match_result.py  recipe.py  recipe_duplicate.py  recipe_duplicate_result.py
src/handlers/cli/: ingest.py
src/handlers/http/: cooccurrence.py  duplicate.py  health.py  match.py
src/repositories/: __init__.py  postgres_repository.py  protocol.py  queries.py  sqlite_repository.py
src/repositories/queries/: postgres.py  sqlite.py
src/schemas/requests/: __init__.py  capacity.py  capacity_summary.py  cooccurrence_request.py  duplicate_request.py  match_request.py
src/schemas/responses/: __init__.py  capacity.py  capacity_list.py  cooccurrence_response.py  daily_summary.py  daily_summary_list.py  error.py  (+2 more)
src/services/: __init__.py  cooccurrence_service.py  duplicate_service.py  file_service.py  ingest_service.py  ingredient_key_service.py  match_service.py  pipeline_service.py
tests/: conftest.py  test_cooccurrence.py  test_duplicates.py
tests-sample/: conftest.py  test_api.py  test_capacity.py  test_features.py  test_file_service.py  test_pipeline.py  test_repository.py  test_triggers.py
