[project]
name = "flight-capacity-pipeline"
version = "0.1.0"
description = "Cargo capacity calculator for airline flight data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "typer>=0.24.1",
    "redis>=7.4",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
